Mudado titulo do componente ResultadoList

--- a/src/app/components/resultado-list/resultado-list.component.html
+++ b/src/app/components/resultado-list/resultado-list.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-elevation-z8">
     <div *ngIf="resultados.length > 0">
-        <h2>Pesquisa Results</h2>
+        <h2>Resultados</h2>
         <ul>
             <li *ngFor="let result of resultados">
             <strong>CPF:</strong> {{ result.cpf }} <br>
